--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="/app.js" defer></script>
-    <script src="/class.js" defer></script>
+    <!-- <script src="/app.js" defer></script> -->
+    <!-- <script src="/class.js" defer></script> -->
+       <!-- <script src="/typeGuards.js" defer></script> -->
+       <!-- <script src="/discriminatedUnion.js"></script> -->
+        <!-- <script src="/typeCasting.js"></script> -->
 </head>
 <body>
-    
+    <input type="text" name="" id="user-input">
 </body>
 </html>
