--- a/prj-15-visual-drag-and-drop-feedback/index.html
+++ b/prj-15-visual-drag-and-drop-feedback/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>ProjectManager</title>
-    <!-- <script src="/app.js" defer></script> -->
-    <!-- <script src="/class.js" defer></script> -->
-       <!-- <script src="/typeGuards.js" defer></script> -->
-       <!-- <script src="/discriminatedUnion.js"></script> -->
-        <!-- <script src="/typeCasting.js"></script> -->
-         <script src="/practical.js"></script>
-         <link rel="stylesheet" href="/practical.css">
-</head>
-<body>
+    <link rel="stylesheet" href="app.css" />
+    <script src="dist/app.js" defer></script>
+  </head>
+  <body>
     <template id="project-input">
       <form>
         <div class="form-control">
@@ -46,5 +42,5 @@
       </section>
     </template>
     <div id="app"></div>
-</body>
+  </body>
 </html>
